fix; side bare z-index

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -6,6 +6,7 @@
     background-color: white;
     color:black;
     .bg{
+        z-index: 999;
         position: fixed;
         top: 0;
         left: 0;
@@ -25,8 +26,8 @@ gap: 20px;
         }
     }
 
-
     button{
+        z-index: 999;
 width: 50px;
 height: 50px;
 border-radius: 50%;
